UPDATE swagger docs
